// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`deposits render loading correctly 1`] = `
<div
  className="bp3-card bp3-elevation-0 col-lg-12 col-md-12 col-sm-12 col-xs-12"
>
  <h4>
    Deposits
  </h4>
  <div
    className="bp3-spinner"
  >
    <div
      className="bp3-spinner-animation"
    >
      <svg
        height={24}
        strokeWidth="16.00"
        viewBox="-3.00 -3.00 106.00 106.00"
        width={24}
      >
        <path
          className="bp3-spinner-track"
          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
        />
        <path
          className="bp3-spinner-head"
          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          pathLength={280}
          strokeDasharray="280 280"
          strokeDashoffset={210}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`deposits render no data correctly 1`] = `
<div
  className="bp3-card bp3-interactive bp3-elevation-0 col-lg-12 col-md-12 col-sm-12 col-xs-12"
>
  <h4>
    Deposits
  </h4>
  <div>
    No related data in this time range. You can try another time range.
  </div>
</div>
`;

exports[`withdrawals render loading correctly 1`] = `
<div
  className="bp3-card bp3-elevation-0 col-lg-12 col-md-12 col-sm-12 col-xs-12"
>
  <h4>
    Withdrawals
  </h4>
  <div
    className="bp3-spinner"
  >
    <div
      className="bp3-spinner-animation"
    >
      <svg
        height={24}
        strokeWidth="16.00"
        viewBox="-3.00 -3.00 106.00 106.00"
        width={24}
      >
        <path
          className="bp3-spinner-track"
          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
        />
        <path
          className="bp3-spinner-head"
          d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          pathLength={280}
          strokeDasharray="280 280"
          strokeDashoffset={210}
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`withdrawals render no data correctly 1`] = `
<div
  className="bp3-card bp3-interactive bp3-elevation-0 col-lg-12 col-md-12 col-sm-12 col-xs-12"
>
  <h4>
    Withdrawals
  </h4>
  <div>
    No related data in this time range. You can try another time range.
  </div>
</div>
`;
